css/styles.scss
/* 
    Author: Michael Catterall
    Edit this file. DO NOT touch the minified CSS file please 
*/

$primary: #6ABC6A;
$doc_padding: 20vw;
$doc_mid_padding: 10vw;
$doc_mobile_padding: 20px;

html {
    touch-action: manipulation;
}

body {
    width: 100vw;
    padding: 0;
    margin: 0;
    font-size: 13px;
    font-family: 'Josefin Sans', sans-serif;
    overflow-x: hidden;
}

a {
    text-decoration: none;
    color: inherit;
    transition: 0.3s color;
    &:hover {
        color: $primary;
    }
}

label {
    font-weight: bold;
    display: block;
    margin: 0 0 5px;
    text-transform: uppercase;
    font-size: 0.6rem;
}

input, textarea {
    margin-bottom: 10px;
    box-sizing: border-box;
    padding: 10px 15px;
    background: #fcfcfc;
    border: 1px solid #e7e7e7;
    border-radius: 3px;
    width: 400px;
    margin-bottom: 20px;
    font-family: inherit;
    font-weight: normal;
    font-size: 1rem;
}

input[type="submit"] {
    background: $primary;
    color: #fff;
    border: 0;
    width: 100px;
    margin-top: 20px;
    border-radius: 5px;;
    &.right_arrow {
        background-image: url(../assets/icons/right_arrow.svg);
        background-repeat: no-repeat;
        background-position: 90% center;
        background-size: 30%;
        padding-right: 40px;
    }
}

#primary_navigation {
    position: sticky;
    top: 0px;
    width: 100%;
    height: 80px;
    background: #fff;
    box-sizing: border-box;
    border-bottom: 1px solid #f3f3f3;
    padding: 20px $doc_padding;
    display: inline-grid;
    justify-content: space-between;
    z-index: 10;
    #logo {
        height: 40px;
        grid-column: 1;
    }
    #primary_menu {
        list-style: none;
        padding: 0;
        grid-column: 2;
        li {
            display: inline-block;
            font-size: 1rem;
            margin-left: 10px;
            &.active {
                color: $primary;
                font-weight: bold;
            }
        }
    }
    #hamburger {
        display: none;
        box-sizing: border-box;
        height: 40px;
        padding: 0px;
        grid-column: 2;
    }
}

.banner {
    width: 100%;
    height: 600px;
    display: table;
    text-align: center;
    &.home {
        background: url(../assets/home_banner.jpg);
        background-size: cover;
        background-position: center;
        background-repeat: no-repeat;
    }
    &.order {
        background: url(../assets/order_banner.jpg);
        background-size: cover;
        background-position: center;
        background-repeat: no-repeat;
    }
    #centered_banner {
        display: table-cell;
        text-align: center;
        vertical-align: middle;
        #banner_content {
            display: inline-block;
            h1 {
                font-size: 6rem;
                color: #fff;
                margin: 0;
                font-weight: bold;
            }
            h4 {
                font-size: 1.5rem;
                color: #fff;
                margin: 0; 
            }
            #banner_btn {
                background: $primary;
                border: 0;
                color: #fff;
                padding: 20px 40px;
                border-radius: 50px;
                font-size: 0.8rem;
                margin-top: 45px;
                cursor: pointer;
                transition: 0.3s transform;
                text-transform: uppercase;
                font-weight: bold;
                letter-spacing: 1px;
                &:hover {
                  transform: scale(1.05);  
                }
            }
        }
    }
}

/* Begin Homepage dependednt styles */


#home-content {
    box-sizing: border-box;
    padding: 50px $doc_padding;
    width: 100%;
    .aligned_article {
        position: relative;
        width: 100%;
        display: inline-grid;
        grid-template-columns: 1fr 1fr;
        grid-gap: 50px;
        margin-top: 100px;
        .article_thumbnail {
            position: relative;
            width: 100%;
            border-radius: 4px;
            grid-row: 1;
            &.left {
                grid-column: 1;
            }
            &.right {
                grid-column: 2;
            }
        }
        .article_content_wrap {
            height: 100%;
            display: table;
            grid-row: 1;
            &.left {
                grid-column: 2;
            }
            &.right {
                grid-column: 1;
            }
            .article_content {
                display: table-cell;
                text-align: left;
                vertical-align: middle;
                    .article_title {
                        font-size: 2rem;
                        margin: 0;
                    }
                    .article_desc {
                        font-size: 1rem;
                    }
            }
        }
    }
}

#statistics {
    position: relative;
    width: 100%;
    background-image: url(../assets/statbar.jpg);
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    margin: 50px 0;
    display: inline-grid;
    box-sizing: border-box;
    padding: 50px $doc_padding;
    justify-content: space-evenly;
    overflow: hidden;
    #stat_underlay {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        background: rgba(0, 0, 0, 0.9);
        z-index: 0;
    }
    .stat_item {
        position: relative;
        text-align: center;
        grid-row: 1;
        grid-gap: 20px;
        img {
            height: 80px;
        }
        h5 {
            color: #fff;
            margin: 0;
            font-size: 1.2rem;
            font-weight: normal;
        }
    }
}
/* ... */

